--- a/examples/partial-template/sources/index.html
+++ b/examples/partial-template/sources/index.html
@@ -1,15 +1,16 @@
-<!-- build:title -->Narrowboats and Canals. A Personal History of Narrowboat Dvbris<!-- /build:title -->
-<!-- build:header -->Narrowboats and Canals<!-- /build:header -->
+{{ title }}Narrowboats and Canals. A Personal History of Narrowboat Dvbris{{ /title }}
+{{ header }}Narrowboats and Canals{{ /header }}
 
-<!-- build:content --><!-- build:p1 --><!-- /build:content -->
+{{ content }}{{ p1 }}{{ /content }}
 
-<!-- build:footer -->
+{{ footer }}
 <table width="100%" height="94" align="center" bgcolor="#f0f0f0">
   <tr>
-    <td colspan="5"><div align="center" style="padding:10px"><b>
-        The UK Canals Web-Ring<br>
-        This site is owned by<br>
-        <font size="2">NB Dvbris Owners</font></b></div></td>
+    <td colspan="5">
+      <div align="center" style="padding:10px">
+        <b>The UK Canals Web-Ring<br>This site is owned by<br><font size="2">NB Dvbris Owners</font></b>
+      </div>
+    </td>
   </tr>
   <tr>
     <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=prev&siteid=37439" target="_blank">Previous Site</a></div></td>
@@ -22,4 +23,4 @@
     <td colspan="5"><div align="center"><img src="images/narrwbt2.gif" width="113" height="30"></div></td>
   </tr>
 </table>
-<!-- /build:footer -->
+{{ /footer }}
