--- a/examples/preserve-tree/sources/file1/index.html
+++ b/examples/preserve-tree/sources/file1/index.html
@@ -1,19 +1,20 @@
-<!-- build:file -->file1<!-- /build:file -->
-<!-- build:title -->Narrowboats and Canals. A Personal History of Narrowboat Dvbris<!-- /build:title -->
-<!-- build:header -->Narrowboats and Canals<!-- /build:header -->
-<!-- build:content -->
+{{ file }}file1{{ /file }}
+{{ title }}Narrowboats and Canals. A Personal History of Narrowboat Dvbris{{ /title }}
+{{ header }}Narrowboats and Canals{{ /header }}
+{{ content }}
 <p>If you have any interest whatsoever about British Canals and narrowboats, then this site is a must for you.</p>
 <p>This site contains a brief history and a selection of photographs about our narrowboat Dvbris. Also you will find some links to other sites on the Internet.</p>
 <p>To continue click <a href="about.html">here.</a></p>
 <p align="center"><img src="images/Boat.JPG" border="2" style="max-width:100%"></p>
-<!-- /build:content -->
-<!-- build:footer -->
+{{ /content }}
+{{ footer }}
 <table width="100%" height="94" align="center" bgcolor="#f0f0f0">
   <tr>
-    <td colspan="5"><div align="center" style="padding:10px"><b>
-        The UK Canals Web-Ring<br>
-        This site is owned by<br>
-        <font size="2">NB Dvbris Owners</font></b></div></td>
+    <td colspan="5">
+      <div align="center" style="padding:10px">
+        <b>The UK Canals Web-Ring<br>This site is owned by<br><font size="2">NB Dvbris Owners</font></b>
+      </div>
+    </td>
   </tr>
   <tr>
     <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=prev&siteid=37439" target="_blank">Previous Site</a></div></td>
@@ -26,4 +27,4 @@
     <td colspan="5"><div align="center"><img src="images/narrwbt2.gif" width="113" height="30"></div></td>
   </tr>
 </table>
-<!-- /build:footer -->
+{{ /footer }}
